--- a/src/components/screens/profile/profile-components/post/post.module.css
+++ b/src/components/screens/profile/profile-components/post/post.module.css
@@ -30,6 +30,7 @@
 
 .postBody {
     margin: 15px 0;
+    word-wrap: break-word;
 }
 
 /* POST FOOTER */
